# Platformer_PoC

./: .gitignore  CMakeLists.txt  CopyFile.cmake  LICENSE  README.md  imgui.ini
.github/workflows/: codeql-analysis.yml  codeql.yml  github-actions_basic_CI.yml  msvc.yml
Res/: map1.txt
imgui/examples/example_glfw_opengl2/: example_glfw_opengl2.vcxproj
imgui/examples/example_glfw_opengl3/: example_glfw_opengl3.vcxproj
imgui/examples/example_win32_directx10/: example_win32_directx10.vcxproj
imgui/examples/example_win32_directx11/: example_win32_directx11.vcxproj
imgui/examples/example_win32_directx9/: example_win32_directx9.vcxproj  imgui.ini
shaders/: fragment.glsl  tile.glsl  vertex.glsl
source/: box_collider.cpp  box_collider.h  display_elements.cpp  display_elements.h  engine.cpp  engine.h  inputs.cpp  inputs.h  logic_elements.cpp  logic_elements.h  main.cpp  map.cpp  map.h  map_display.cpp  map_display.h  movable.cpp  movable.h  npc_goomba.cpp  npc_goomba.h  npc_movable.h  player.cpp  player.h  player_display.cpp  player_display.h  shader.cpp  shader.h  test_map.h
source/Engine/: map_loader.h
source/Model/: map.cpp  map.h
